# dataclasses-json

./: .gitignore  404.html  Pipfile  README.md  include_class_info.ipynb  index.html  meta.yaml  publish.py  publish.sh  pyproject.toml  setup.py  sitemap.xml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: code-quality.yaml  prepare-release.yaml  (+1 more)
3.6venv/: pip-selfcheck.json  pyvenv.cfg
dataclasses_json/: __init__.py  __version__.py  api.py  callable_alias.py  cfg.py  core.py  dataclasses2.py  dataclasses_json.py  errors.py  global_config.py  mm.py  recursion.py  recursion_limit.py  stringcase.py  undefined.py  utils.py
dataclasses_json.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: load_test.py
search/: search_index.json
tests/: conftest.py  entities.py  fixtures.py  strategies.py  test_annotations.py  test_api.py  test_builtins.py  test_cache.py  test_callable_alias.py  test_collection_of_unions.py  test_collections.py  test_core.py  test_custom_field.py  test_dataclasses_json.py  test_dict.py  test_entities.py  test_enum.py  test_examples.py  test_exclude.py  test_generic_dataclass.py  test_generics.py  test_global_config.py  test_hash_key.py  test_init_var.py  test_invariants.py  test_letter_case.py  test_literals.py  test_metadata.py  test_multiple_classes_same_name.py  test_nested.py  test_numpy.py  test_pipe_notation.py  test_recursive.py  test_schema.py  test_self.py  test_self_recursion.py  test_serialization_ignore.py  test_str_subclass.py  test_subclasses.py  test_time.py  (+5 more)
(+14 files in other folders)
