[tool.poetry]
name = "dataclasses-json"
version = "0.0.0"
description = "Easily serialize dataclasses to and from JSON."
authors = ["Charles Li <charles.dt.li@gmail.com>"]
maintainers = ['Charles Li <charles.dt.li@gmail.com>', 'Georgiy Zubrienko <gzu@ecco.com>', 'Vitaliy Savitskiy <visa@ecco.com>', 'Matthias Als <mata@ecco.com>']
license = 'MIT'
readme = "README.md"
repository = 'https://github.com/lidatong/dataclasses-json'

[tool.poetry.dependencies]
python = "^3.7"
typing-inspect = ">=0.4.0, <1"
marshmallow = ">=3.18.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "~2.12"
mypy = ">=0.710, <2"
hypothesis = "^6.77"
portray = "^1.6"
flake8 = "^5"
simplejson = "^3.19.1"
black = "^22"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.2.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.urls]
changelog = "https://github.com/lidatong/dataclasses-json/releases"
documentation = "https://lidatong.github.io/dataclasses-json/"
issues = "https://github.com/lidatong/dataclasses-json/issues"
